#!groovy
/*
 * Copyright 2020 SpotBugs plugin contributors
 *
 * This file is part of IntelliJ SpotBugs plugin.
 *
 * IntelliJ SpotBugs plugin is free software: you can redistribute it 
 * and/or modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation, either version 3 of 
 * the License, or (at your option) any later version.
 *
 * IntelliJ SpotBugs plugin is distributed in the hope that it will
 * be useful, but WITHOUT ANY WARRANTY; without even the implied 
 * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * See the GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with IntelliJ SpotBugs plugin.
 * If not, see <http://www.gnu.org/licenses/>.
 */

plugins {
    id "org.jetbrains.intellij" version "0.4.16"
}

apply plugin: 'org.jetbrains.intellij'
apply plugin: 'maven'
apply plugin: 'java'

sourceCompatibility = 1.11
targetCompatibility = 1.11

repositories {
    mavenLocal()
    mavenCentral()
}

intellij {
    if (project.hasProperty("ijVersion")) {
        version ijVersion
    } else {
        version '2019.3'
    }

    pluginName 'spotbugs-idea'
    updateSinceUntilBuild false
    type 'IC'

    plugins 'git4idea'
    plugins 'java'
}

runIde {
    systemProperties(["jdk.util.zip.ensureTrailingSlash":false])
}

/*
FAILURE: Build failed with an exception.

* What went wrong:
A problem occurred evaluating root project 'spotbugs-idea'.
> Could not find method runIdea() for arguments [build_bx44c5s67a78hdgfid54wfjj6$_run_closure4@75342e13] on root project 'spotbugs-idea' of type org.gradle.api.Project.

runIdea {
    systemProperties(["jdk.util.zip.ensureTrailingSlash":false])
}
*/

dependencies {
    compile ('com.github.spotbugs:spotbugs:4.0.0') {
        exclude group: 'xml-apis', module: 'xml-apis'
    }
    compile 'org.jsoup:jsoup:1.8.3'
    compile fileTree(dir: "$project.rootDir/lib", include: "TableLayout-bin-*.jar")
    testCompile 'junit:junit:4.12'
    testCompile 'org.assertj:assertj-core:3.6.2'
    testCompile 'org.mockito:mockito-core:2.7.6'
}

task wrapper(type: Wrapper) {
    gradleVersion = '4.4.1'
}